--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>uip-web</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>uip-web</name>
     <url>http://maven.apache.org</url>
