--- a/uip-web/src/main/webapp/WEB-INF/web.xml
+++ b/uip-web/src/main/webapp/WEB-INF/web.xml
@@ -7,12 +7,17 @@
 
     <display-name>uip-web</display-name>
 
+    <!-- 默认页面 -->
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
     <!-- Spring配置文件开始  -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath:springContext-common.xml,
-            classpath:springContext-config.xml
+            classpath:spring/springContext-config.xml
         </param-value>
     </context-param>
     <listener>
@@ -77,7 +82,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring-mvc.xml</param-value>
+            <param-value>classpath:spring/springContext-springmvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
