--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -1,25 +1,24 @@
 #jpa configure
 jpa.persistenceUnitName=jpa.es.web.test
-jpa.generateDdl=${jpa.generateDdl}
-jpa.database=${jpa.database}
-jpa.databasePlatform=${jpa.databasePlatform}
-jpa.showSql=${jpa.showSql}
+jpa.generateDdl=true
+jpa.database=HSQL
+jpa.showSql=true
 
 #hibernate configure
 hibernate.query.substitutions=true 1, false 0
 hibernate.default_batch_fetch_size=20
 hibernate.max_fetch_depth=2
 hibernate.bytecode.use_reflection_optimizer=true
-hibernate.cache.use_second_level_cache=false
+hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=true
 
-connection.url=${connection.url}
-connection.username=${connection.username}
-connection.password=${connection.password}
+connection.url=jdbc:mysql://localhost:3306/uip?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.username=root
+connection.password=700103
 
 #druid datasource
 druid.initialSize=10
