--- a/uip-web/src/main/webapp/WEB-INF/web.xml
+++ b/uip-web/src/main/webapp/WEB-INF/web.xml
@@ -78,7 +78,7 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>spring</servlet-name>
+        <servlet-name>spring-mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
@@ -87,8 +87,18 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>spring</servlet-name>
+        <servlet-name>spring-mvc</servlet-name>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>spring-mvc</servlet-name>
+        <url-pattern>/index</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>spring-mvc</servlet-name>
+        <url-pattern>/uploadFile</url-pattern>
     </servlet-mapping>
 
     <!--如果 发现报 该错误 No mapping found for HTTP request with URI  加入下mapping
