--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -174,7 +174,7 @@
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
-                <log.dir>D:/Backup/uip</log.dir>
+                <log.dir>D:/log/uip</log.dir>
             </properties>
         </profile>
         <profile>
@@ -195,7 +195,7 @@
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
-                <log.dir>D:/Backup/es</log.dir>
+                <log.dir>D:/log/uip</log.dir>
             </properties>
         </profile>
 
@@ -217,7 +217,7 @@
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
-                <log.dir>/data/backup/uip</log.dir>
+                <log.dir>D:/log/uip</log.dir>
             </properties>
         </profile>
     </profiles>
