添加utgard实现的opc的支持.

--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -1,5 +1,5 @@
 #jpa configure
-jpa.persistenceUnitName=jpa.es.web.test
+jpa.persistenceUnitName=persistenceUnit
 jpa.generateDdl=true
 jpa.database=HSQL
 jpa.showSql=true
