添加utgard实现的opc的支持.

--- a/uip-web/src/main/resources/conf/utgard-opc-config.properties
+++ b/uip-web/src/main/resources/conf/utgard-opc-config.properties
@@ -1,6 +1,8 @@
-host=localhost
-domain=
-username=Administrator
-password=sn1234!@
-clsid=f8582cf2-88fb-11d0-b850-00c0f0104305
-progid=
+max_client=10
+
+host->1=localhost
+domain->1=
+username->1=Administrator
+password->1=sn1234!@
+clsid->1=f8582cf2-88fb-11d0-b850-00c0f0104305
+progid->1=
