opc服务添加utgard支持.

--- a/uip-web/src/main/resources/conf/utgard-opc-config.properties
+++ b/uip-web/src/main/resources/conf/utgard-opc-config.properties
@@ -4,6 +4,6 @@ init_item_type=1
 host->1=localhost
 domain->1=
 username->1=Administrator
-password->1=sn1234!@
-clsid->1=f8582cf2-88fb-11d0-b850-00c0f0104305
+password->1=700103
+clsid->1=b3af0bf6-4c0c-4804-a122-6f3b160f4397
 progid->1=
