--- a/uip-web/src/main/webapp/WEB-INF/web.xml
+++ b/uip-web/src/main/webapp/WEB-INF/web.xml
@@ -101,10 +101,28 @@
         <url-pattern>/uploadFile</url-pattern>
     </servlet-mapping>
 
+    <!-- CXF Servlet 的定义，以及它的映射 -->
+    <servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>
+            org.apache.cxf.transport.servlet.CXFServlet
+        </servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <!-- CXFServlet Mapping -->
+    <servlet-mapping>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/ws/*</url-pattern>
+    </servlet-mapping>
+
     <!--如果 发现报 该错误 No mapping found for HTTP request with URI  加入下mapping
     <servlet-mapping>
         <servlet-name>jsp</servlet-name>
         <url-pattern>*.jsp</url-pattern>
     </servlet-mapping-->
+
+    <session-config>
+        <session-timeout>600</session-timeout>
+    </session-config>
 
 </web-app>
