添加基于CXF的web service支持.

--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -1,8 +1,8 @@
 #jpa configure
 jpa.persistenceUnitName=persistenceUnit
-jpa.generateDdl=true
+jpa.generateDdl=false
 jpa.database=HSQL
-jpa.showSql=true
+jpa.showSql=false
 
 #hibernate configure
 hibernate.query.substitutions=true 1, false 0
@@ -16,7 +16,7 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=true
 
-connection.url=jdbc:mysql://192.168.1.239:3306/dev_mis_nj_20150319?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://192.168.1.239:3306/dev_mis_nj_20150420?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
 connection.password=87783121
 
