--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -159,16 +159,16 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <db.name>dev_mis_nj_20150420</db.name>
+                <db.name>dev_mis_nj_20150509</db.name>
                 <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
                 <connection.admin.url>
-                    <![CDATA[ jdbc:mysql://192.168.1.239:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
+                    <![CDATA[ jdbc:mysql://localhost:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
                 </connection.admin.url>
                 <connection.url>
-                    <![CDATA[ jdbc:mysql://192.168.1.239:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
+                    <![CDATA[ jdbc:mysql://localhost:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
                 </connection.url>
                 <connection.username>root</connection.username>
-                <connection.password>87783121</connection.password>
+                <connection.password>700103</connection.password>
                 <jpa.showSql>true</jpa.showSql>
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
@@ -180,7 +180,7 @@
             <!--正式环境-->
             <id>production</id>
             <properties>
-                <db.name>uip</db.name>
+                <db.name>dev_mis_nj_20150509</db.name>
                 <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
                 <connection.admin.url>
                     <![CDATA[ jdbc:mysql://localhost:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
