--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,9 +16,9 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=true
 
-connection.url=jdbc:mysql://192.168.1.239:3306/dev_mis_nj_20150420?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://localhost:3306/dev_mis_nj_20150509?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
-connection.password=87783121
+connection.password=700103
 
 #druid datasource
 druid.initialSize=10
@@ -31,6 +31,6 @@ druid.validationQuery=SELECT 'x'
 druid.testWhileIdle=true
 druid.testOnBorrow=false
 druid.testOnReturn=false
-druid.poolPreparedStatements=true
+druid.poolPreparedStatements=false
 druid.maxPoolPreparedStatementPerConnectionSize=20
 druid.filters=wall,stat
