Jodbc odbc 功能集成。

--- a/uip-parent/pom.xml
+++ b/uip-parent/pom.xml
@@ -550,7 +550,7 @@
             <version>${hik.version}</version>
         </dependency>
 
-        <!-- odbc -->
+        <!-- jodbc -->
         <dependency>
             <groupId>com.microsoft.sqlserver.jdbc</groupId>
             <artifactId>sqljdbc</artifactId>
