--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     <developer>
       <name>gemingming</name>
       <email>shuiqing301@gmail.com</email>
-      <url>https://github.com/ShuiQing301</url>
+      <url>https://github.com/shuiqing301</url>
       <roles>
         <role>software engineer</role>
       </roles>
