--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -169,7 +169,7 @@
                 </connection.url>
                 <connection.username>root</connection.username>
                 <connection.password>87783121</connection.password>
-                <jpa.showSql>true</jpa.showSql>
+                <jpa.showSql>false</jpa.showSql>
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
