增加接口数据汇集，大屏显示灯定时器。

--- a/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
+++ b/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
@@ -1,7 +1,7 @@
-odbc_url=jdbc:sqlserver://192.168.1.114:1433;DatabaseName=Navicat for SQL Server
+odbc_url=jdbc:sqlserver://192.168.1.1:1433;DatabaseName=toledo_aw
 odbc_username=sa
-odbc_password=sqlserver
+odbc_password=sss
 
-jdbc_url=jdbc:mysql://192.168.1.239:3306/test_mis_nj_20150506?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+jdbc_url=jdbc:mysql://localhost:3306/gdmis_20150526?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 jdbc_username=root
-jdbc_password=87783121
+jdbc_password=700103
