--- a/uip-web/src/main/resources/conf/utgard-opc-config.properties
+++ b/uip-web/src/main/resources/conf/utgard-opc-config.properties
@@ -1,9 +1,9 @@
 max_client=1
-init_item_type=1
+init_item_type=2
 
-host->1=127.0.0.1
+host->1=192.168.88.240
 domain->1=
 username->1=Administrator
-password->1=sn1234!@
-clsid->1=f8582cf2-88fb-11d0-b850-00c0f0104305
+password->1=123123
+clsid->1=001aaaa6-fb54-4627-84b2-8777379e5868
 progid->1=
