--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,7 +16,7 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=true
 
-connection.url=jdbc:mysql://192.168.1.239:3306/test_mis_nj_20150514?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://192.168.1.239:3306/dev_gov_rd_20150408?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
 connection.password=87783121
 
@@ -33,4 +33,4 @@ druid.testOnBorrow=false
 druid.testOnReturn=false
 druid.poolPreparedStatements=false
 druid.maxPoolPreparedStatementPerConnectionSize=20
-druid.filters=wall,stat
+druid.filters=stat
