解决opc多实例化无法加载配置信息的bug.

--- a/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
+++ b/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
@@ -2,6 +2,6 @@ odbc_url=jdbc:sqlserver://192.168.1.1:1433;DatabaseName=toledo_aw
 odbc_username=sa
 odbc_password=sss
 
-jdbc_url=jdbc:mysql://localhost:3306/gdmis_20150526?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+jdbc_url=jdbc:mysql://192.168.88.242:3306/gdmis?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 jdbc_username=root
-jdbc_password=700103
+jdbc_password=gdmis!@#$
