--- a/uip-web/src/main/resources/conf/utgard-opc-config.properties
+++ b/uip-web/src/main/resources/conf/utgard-opc-config.properties
@@ -1,9 +1,18 @@
-max_client=1
+max_client=2
 init_item_type=2
 
 host->1=192.168.88.240
+sysid->1=1
 domain->1=
 username->1=Administrator
 password->1=123123
 clsid->1=001aaaa6-fb54-4627-84b2-8777379e5868
 progid->1=
+
+host->2=192.168.3.1
+sysid->2=3
+domain->2=
+username->2=Administrator
+password->2=123
+clsid->2=c2d620bb-ef0d-4c20-ae02-7221beec970b
+progid->2=
