--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,9 +16,9 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=true
 
-connection.url=jdbc:mysql://localhost:3306/gdmis_20150526?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://snmis.xicp.net:3306/test_mis_nj_20150604?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
-connection.password=700103
+connection.password=87783121
 
 #druid datasource
 druid.initialSize=10
