新增接口数据重新汇集。

--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -159,7 +159,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <db.name>test_mis_nj_20150604</db.name>
+                <db.name>dev_mis_nj_20150513</db.name>
                 <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
                 <connection.admin.url>
                     <![CDATA[ jdbc:mysql://snmis.xicp.net:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
