--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -20,6 +20,15 @@ connection.url=jdbc:mysql://localhost:3306/gdmis_20150526?zeroDateTimeBehavior=c
 connection.username=root
 connection.password=700103
 
+#mongodb configure
+mongo.connectionsPerHost=4
+mongo.threadsAllowedToBlockForConnectionMultiplier=20
+mongo.connectTimeout=0
+mongo.maxWaitTime=10000
+mongo.autoConnectRetry=true
+mongo.socketKeepAlive=true
+mongo.socketTimeout=0
+
 #druid datasource
 druid.initialSize=10
 druid.minIdle=10
