opc添加mongo的支持

--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,11 +16,14 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=true
 
-connection.url=jdbc:mysql://localhost:3306/gdmis_20150526?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://192.168.1.239:3306/test_mis_nj_20150623?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
-connection.password=700103
+connection.password=87783121
 
 #mongodb configure
+mongo.host=192.168.1.239
+mongo.port=27017
+mongo.dbName=local
 mongo.connectionsPerHost=4
 mongo.threadsAllowedToBlockForConnectionMultiplier=20
 mongo.connectTimeout=0
@@ -28,6 +31,7 @@ mongo.maxWaitTime=10000
 mongo.autoConnectRetry=true
 mongo.socketKeepAlive=true
 mongo.socketTimeout=0
+mongo.slaveOk=true
 
 #druid datasource
 druid.initialSize=10
