--- a/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
+++ b/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
@@ -1,7 +1,7 @@
-odbc_url=jdbc:sqlserver://192.168.1.1:1433;DatabaseName=toledo_aw
+odbc_url=jdbc:sqlserver://192.168.1.114:1433;DatabaseName=Navicat for SQL Server
 odbc_username=sa
-odbc_password=sss
+odbc_password=sqlserver
 
-jdbc_url=jdbc:mysql://192.168.88.242:3306/gdmis?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+jdbc_url=jdbc:mysql://snmis.xicp.net:3306/test_mis_nj_20150623?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 jdbc_username=root
-jdbc_password=gdmis!@#$
+jdbc_password=87783121
