--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,14 +16,14 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=true
 
-connection.url=jdbc:mysql://192.168.1.239:3306/test_mis_nj_20150623?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://localhost:3306/dev_mis_nj_20150509?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
-connection.password=87783121
+connection.password=700103
 
 #mongodb configure
-mongo.host=192.168.1.239
+mongo.host=localhost
 mongo.port=27017
-mongo.dbName=local
+mongo.dbName=snmis_nj
 mongo.connectionsPerHost=4
 mongo.threadsAllowedToBlockForConnectionMultiplier=20
 mongo.connectTimeout=0
@@ -36,7 +36,7 @@ mongo.slaveOk=true
 #druid datasource
 druid.initialSize=10
 druid.minIdle=10
-druid.maxActive=50
+druid.maxActive=200
 druid.maxWait=60000
 druid.timeBetweenEvictionRunsMillis=60000
 druid.minEvictableIdleTimeMillis=300000
