修改地磅相关

--- a/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
+++ b/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
@@ -2,6 +2,6 @@ odbc_url=jdbc:sqlserver://192.168.1.114:1433;DatabaseName=Navicat for SQL Server
 odbc_username=sa
 odbc_password=sqlserver
 
-jdbc_url=jdbc:mysql://snmis.xicp.net:3306/test_mis_nj_20150623?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+jdbc_url=jdbc:mysql://localhost:3306/dev_mis_nj_20150509?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 jdbc_username=root
-jdbc_password=87783121
+jdbc_password=700103
