Indicator comput refactoring.

--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -21,7 +21,7 @@ connection.username=root
 connection.password=87783121
 
 #mongodb configure
-mongo.host=localhost
+mongo.host=192.168.1.239
 mongo.port=27017
 mongo.dbName=snmis_nj
 mongo.connectionsPerHost=4
