--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,7 +16,7 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=true
 
-connection.url=jdbc:mysql://localhost:3306/snmis20150811?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://localhost:3306/snmis_nj_20150917?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
 connection.password=87783121
 
