--- a/uip-monitorhub/pom.xml
+++ b/uip-monitorhub/pom.xml
@@ -9,10 +9,10 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>uip-web</artifactId>
+    <artifactId>uip-monitorhub</artifactId>
     <packaging>war</packaging>
-    <name>uip-web</name>
-    <url>https://github.com/ShuiQing301/uip/web</url>
+    <name>uip-monitorhub</name>
+    <url>https://github.com/shuiqing301/uip/monitorhub</url>
 
     <build>
         <finalName>${project.artifactId}</finalName>
@@ -168,27 +168,6 @@
                 <connection.username>root</connection.username>
                 <connection.password>87783121</connection.password>
                 <jpa.showSql>true</jpa.showSql>
-                <jpa.generateDdl>false</jpa.generateDdl>
-                <jpa.database>MYSQL</jpa.database>
-                <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
-                <log.dir>D:/log/uip</log.dir>
-            </properties>
-        </profile>
-        <profile>
-            <!--正式环境-->
-            <id>production</id>
-            <properties>
-                <db.name>jymis</db.name>
-                <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
-                <connection.admin.url>
-                    <![CDATA[ jdbc:mysql://192.168.21.139:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
-                </connection.admin.url>
-                <connection.url>
-                    <![CDATA[ jdbc:mysql://192.168.21.139:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
-                </connection.url>
-                <connection.username>root</connection.username>
-                <connection.password>gdmis!@#$</connection.password>
-                <jpa.showSql>false</jpa.showSql>
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
