--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -57,47 +57,6 @@
                     </webAppConfig>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>com.googlecode</groupId>
-                <artifactId>maven-db-plugin</artifactId>
-                <version>1.4</version>
-                <configuration>
-                    <adminDbConnectionSettings>
-                        <jdbcDriver>${connection.driver_class}</jdbcDriver>
-                        <jdbcUrl>${connection.admin.url}</jdbcUrl>
-                        <userName>${connection.username}</userName>
-                        <password>${connection.password}</password>
-                    </adminDbConnectionSettings>
-                    <appDbConnectionSettings>
-                        <jdbcDriver>${connection.driver_class}</jdbcDriver>
-                        <jdbcUrl>${connection.url}</jdbcUrl>
-                        <userName>${connection.username}</userName>
-                        <password>${connection.password}</password>
-                    </appDbConnectionSettings>
-                    <dbDataScriptsDirectory>
-                        <param>src/main/sql/data</param>
-                    </dbDataScriptsDirectory>
-                    <dbSchemaScriptsDirectory>
-                        <param>src/main/sql/schema</param>
-                    </dbSchemaScriptsDirectory>
-                    <dbUpdateScriptsDirectory>
-                        <param>src/main/sql/update</param>
-                    </dbUpdateScriptsDirectory>
-                    <dbCreateStatements>
-                        create database ${db.name} CHARACTER SET 'utf8';
-                    </dbCreateStatements>
-                    <dbDropStatements>drop database ${db.name}; </dbDropStatements>
-                    <sqlDelimiter>;;</sqlDelimiter>
-                    <scriptEncoding>UTF-8</scriptEncoding>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>${mysql.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -157,7 +116,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <db.name>test_mis_jz_20150916</db.name>
+                <db.name>snmis_zbcs_20151020</db.name>
                 <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
                 <connection.admin.url>
                     <![CDATA[ jdbc:mysql://192.168.1.239:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
@@ -167,7 +126,7 @@
                 </connection.url>
                 <connection.username>root</connection.username>
                 <connection.password>87783121</connection.password>
-                <jpa.showSql>true</jpa.showSql>
+                <jpa.showSql>false</jpa.showSql>
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
@@ -178,16 +137,16 @@
             <!--正式环境-->
             <id>production</id>
             <properties>
-                <db.name>jymis</db.name>
+                <db.name>snmis_jz_20151020</db.name>
                 <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
                 <connection.admin.url>
-                    <![CDATA[ jdbc:mysql://192.168.21.139:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
+                    <![CDATA[ jdbc:mysql://localhost:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
                 </connection.admin.url>
                 <connection.url>
-                    <![CDATA[ jdbc:mysql://192.168.21.139:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
+                    <![CDATA[ jdbc:mysql://localhost:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8 ]]>
                 </connection.url>
                 <connection.username>root</connection.username>
-                <connection.password>gdmis!@#$</connection.password>
+                <connection.password></connection.password>
                 <jpa.showSql>false</jpa.showSql>
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
