--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -51,6 +51,7 @@
                             <value>development</value>
                         </systemProperty>
                     </systemProperties>
+                    <contextXml>${project.basedir}/src/main/resources/jetty-context.xml</contextXml>
                     <webAppSourceDirectory>src/main/webapp</webAppSourceDirectory>
                     <webAppConfig>
                         <contextPath>/${project.artifactId}</contextPath>
@@ -116,7 +117,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <db.name>zjg-20151101</db.name>
+                <db.name>zjg-20151101-1</db.name>
                 <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
                 <connection.admin.url>
                     <![CDATA[ jdbc:mysql://192.168.1.239:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
@@ -126,7 +127,7 @@
                 </connection.url>
                 <connection.username>root</connection.username>
                 <connection.password>87783121</connection.password>
-                <jpa.showSql>true</jpa.showSql>
+                <jpa.showSql>false</jpa.showSql>
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
