--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -14,24 +14,11 @@ hibernate.cache.use_query_cache=true
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
-hibernate.generate_statistics=true
+hibernate.generate_statistics=false
 
-connection.url=jdbc:mysql://192.168.1.239:3306/zjg-20151101?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://192.168.1.239:3306/zjg-20151101-1?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
 connection.password=87783121
-
-#mongodb configure
-mongo.host=192.168.1.239
-mongo.port=27017
-mongo.dbName=snmis_nj
-mongo.connectionsPerHost=4
-mongo.threadsAllowedToBlockForConnectionMultiplier=20
-mongo.connectTimeout=0
-mongo.maxWaitTime=10000
-mongo.autoConnectRetry=true
-mongo.socketKeepAlive=true
-mongo.socketTimeout=0
-mongo.slaveOk=true
 
 #druid datasource
 druid.initialSize=10
@@ -41,7 +28,7 @@ druid.maxWait=60000
 druid.timeBetweenEvictionRunsMillis=60000
 druid.minEvictableIdleTimeMillis=300000
 druid.validationQuery=SELECT 'x'
-druid.testWhileIdle=true
+druid.testWhileIdle=false
 druid.testOnBorrow=false
 druid.testOnReturn=false
 druid.poolPreparedStatements=false
