新增南京城管局接口.

--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -1,8 +1,8 @@
 #jpa configure
 jpa.persistenceUnitName=persistenceUnit
-jpa.generateDdl=false
+jpa.generateDdl=true
 jpa.database=HSQL
-jpa.showSql=false
+jpa.showSql=true
 
 #hibernate configure
 hibernate.query.substitutions=true 1, false 0
