--- a/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
+++ b/uip-web/src/main/resources/conf/odbc-jdbc-config.properties
@@ -1,3 +1,3 @@
-odbc_url=jdbc:sqlserver://192.168.1.124:1433;DatabaseName=Navicat for SQL Server
+odbc_url=jdbc:sqlserver://192.168.10.105:1433;DatabaseName=yz
 odbc_username=sa
 odbc_password=sqlserver
