--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-uip.iml
 /uip-parent/.classpath
 /uip-web/.classpath
 /uip-core/.classpath
@@ -6,3 +5,5 @@ uip.iml
 /uip-parent/uip-parent.iml
 /uip-web/uip-web.iml
 *.iml
+target
+log/*
