--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -117,17 +117,17 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <db.name>test_20151202</db.name>
+                <db.name>snmis_jz_20151130</db.name>
                 <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
                 <connection.admin.url>
-                    <![CDATA[ jdbc:mysql://61.177.17.206:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
+                    <![CDATA[ jdbc:mysql://192.168.1.239:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
                 </connection.admin.url>
                 <connection.url>
-                    <![CDATA[ jdbc:mysql://61.177.17.206:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
+                    <![CDATA[ jdbc:mysql://192.168.1.239:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
                 </connection.url>
                 <connection.username>root</connection.username>
-                <connection.password>gdmis!@#$</connection.password>
-                <jpa.showSql>true</jpa.showSql>
+                <connection.password>87783121</connection.password>
+                <jpa.showSql>false</jpa.showSql>
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
