--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,14 +16,14 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=false
 
-connection.url=jdbc:mysql://192.168.1.239:3306/zlm_mis_yz_20151118?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://192.168.1.239:3306/snmis_jz_20151130?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
 connection.password=87783121
 
 #druid datasource
 druid.initialSize=10
 druid.minIdle=10
-druid.maxActive=200
+druid.maxActive=600
 druid.maxWait=60000
 druid.timeBetweenEvictionRunsMillis=60000
 druid.minEvictableIdleTimeMillis=300000
