南京地磅的整改，支持月和年地磅指标的生成.

--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,9 +16,9 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=false
 
-connection.url=jdbc:mysql://localhost:3306/snmis201601?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://192.168.1.239:3306/test_mis_yz_20151220?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
-connection.password=
+connection.password=87783121
 
 #druid datasource
 druid.initialSize=10
