1、解决删除对象的问题. 2、解决inst函数计算的时间问题.

--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -127,8 +127,8 @@
                 </connection.url>
                 <connection.username>root</connection.username>
                 <connection.password>87783121</connection.password>
-                <jpa.showSql>false</jpa.showSql>
-                <jpa.generateDdl>false</jpa.generateDdl>
+                <jpa.showSql>true</jpa.showSql>
+                <jpa.generateDdl>true</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
             </properties>
